multi: add NextInternalKey and NextScriptKey RPC methods
